--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -49,7 +49,7 @@
 			<div class="page-header">
   				<h2 class="text-center">Our Menu</h2>
 			</div>
-			<div class="col-sm-12">
+			<div class="col-xs-12">
 				<div class="text-center"> 
 					<h3>Chicken</h3>
 				</div>
